--- a/HotelManagement/HotelManagement/bin/HotelManagement.dll.config
+++ b/HotelManagement/HotelManagement/bin/HotelManagement.dll.config
@@ -48,7 +48,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="HotelManagementDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=XI2333\SQLEXPRESS;initial catalog=HotelManagementDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HotelManagementDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-AG4UBR9\SQL2019EXPRESS;initial catalog=HotelManagementDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
